compiler/testData/diagnostics/tests/regressions/ThisConstructorInGenericClass.kt
class Z() {
    <!SECONDARY_CONSTRUCTORS_ARE_NOT_SUPPORTED!>this(x : Int) : this() {}<!>
}